--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </div>
         </div> <!--.contenedor-->
     </header>
+    <a href="#" id="menu">Ver menú</a>
     <div id="navegacion" class="navegacion">
         <nav id="menu">
             <ul class="clearfix">
@@ -46,8 +47,34 @@
             </ul>
         </nav>
     </div>
+    <div class="contenedor servicios">
+      <h2>Nuestro servicos</h2>
+      <nav>
+        <a href="#viajes">Viajes</a>
+        <a href="#transporte">Transporte</a>
+        <a href="#asesorias">Asesorias</a>
+      </nav>
+    </div>
+    <div class="nuestros-servicios">
+      <div id="viajes">
+        <h3>Próximos viajes</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div id="asesorias">
+        <h3>Asesoria y Cursos</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div id="transporte">
+        <h3>Transporte</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+    </div>
 
-    <div id="contenido" class="contenido">
+
+    <div id="contenido" class="contenido contenedor">
         <main>
             <article>
                 <h2>Viajar a Londres</h2>
@@ -110,6 +137,7 @@
           Todos los derechos reservados &copy;. Blog de Viajes 2016
       </p>
     </footer>
+    <script src="js/jquery.js"></script>
     <script src="js/scripts.js"></script>
 
   </body>
